@@ -70,7 +70,7 @@
 	<attribute name="Class-Path" value="lib/postgresql-8.3-604.jdbc4.jar lib/jfreechart-1.0.13.jar lib/jcommon-1.0.16.jar lib/jxl.jar lib/jcalendarbutton-1.4.5.jar lib/looks-2.3.1.jar lib/swingx-1.6.jar lib/swingx-ws-1.0.jar  resources/"/>
     <section name="common">
       <attribute name="Specification-Title" value="Example"/>
-      <attribute name="Specification-Version" value="${app.version}"/>
+      <attribute name="Specification-Version" value="${app.version}.${revision.version}"/>
       <attribute name="Specification-Vendor" value="KK Software"/>
       <attribute name="Implementation-Title" value="common"/>
       <attribute name="Implementation-Version" value="${version} ${TODAY}"/> 
@@ -137,7 +137,7 @@
 	</fileset>
 	</copy>
 	
-	<zip destfile="${swing.home}/finfamily${app.version}.zip" basedir="${dist.home}"
+	<zip destfile="${swing.home}/finfamily${revision.version}.zip" basedir="${dist.home}"
 	  includes="suku.jar suku.sh SukuMac lib/postgresql-8.3-604.jdbc4.jar 
 	  lib/jxl.jar lib/jcalendarbutton-1.4.5.jar lib/jfreechart-1.0.13.jar lib/jcommon-1.0.16.jar lib/swingx-1.6.jar lib/swingx-ws-1.0.jar
 	  lib/looks-2.3.1.jar properties/* 
@@ -179,7 +179,7 @@ package fi.kaila.suku.ant;
 /** Dont modify. Generated by Ant */
 public class AntVersion {
   	/** Generated version number by Ant */
-	public static final String antVersion = "11.-3.${app.version}";
+	public static final String antVersion = "${app.version}.${revision.version}";
 }
   		
 </echo> 
@@ -197,7 +197,7 @@ public class AntVersion {
 ; (To generate a new GUID, click Tools | Generate GUID inside the IDE.)
 AppId={{68611E54-42B6-437B-9857-411678FE2E68}
 AppName=FinFamily
-AppVerName=FinFamily 11.-3.${app.version}
+AppVerName=FinFamily ${app.version}.${revision.version}
 AppPublisher=KK-Software
 AppPublisherURL=http://www.sukuohjelmisto.fi
 AppSupportURL=http://www.sukuohjelmisto.fi
@@ -205,7 +205,7 @@ AppUpdatesURL=http://www.sukuohjelmisto.fi
 DefaultDirName={pf}\FinFamily
 DefaultGroupName=FinFamily
 OutputDir=..\swing
-OutputBaseFilename=FinFamily${app.version}
+OutputBaseFilename=FinFamily${revision.version}
 SetupIconFile=..\resources\images\Genealogia.ico
 Compression=lzma
 SolidCompression=yes
