@@ -2,6 +2,10 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
+Release 976 on 10 dec 2010
+
+* Added image scaling to word report images 
+
 Release 971 on 06 dec 2010
 
 * gedcom import with empty occu tag fixed
